@@ -1,3 +1,9 @@
+2016-10-13  Natalia Portillo  <claunia@claunia.com>
+
+	* Commands/DeviceInfo.cs:
+	  Added support for SCSI MODE PAGEs 11h, 12h, 13h and 14h
+	  (medium partitions)
+
 2016-10-12  Natalia Portillo  <claunia@claunia.com>
 
 	* Commands/DumpMedia.cs:
